tests/ui/resolve/super_type.stderr
error: identifier `this` already declared
  --> ROOT/tests/ui/resolve/super_type.sol:LL:CC
   |
LL |     struct this { uint x; }
   |            ^^^^
   |

error: identifier `super` already declared
  --> ROOT/tests/ui/resolve/super_type.sol:LL:CC
   |
LL |     struct super { uint x; }
   |            ^^^^^
   |

error: `this` is a builtin, which cannot be indexed in type paths
  --> ROOT/tests/ui/resolve/super_type.sol:LL:CC
   |
LL |         this.S1 memory x0;
   |         ^^^^
   |

error: `super` is a builtin, which cannot be indexed in type paths
  --> ROOT/tests/ui/resolve/super_type.sol:LL:CC
   |
LL |         super.S1 memory x1;
   |         ^^^^^
   |

error: `super` is a builtin, which cannot be indexed in type paths
  --> ROOT/tests/ui/resolve/super_type.sol:LL:CC
   |
LL |         super.S2 memory x2;
   |         ^^^^^
   |

error: `super` is a builtin, which cannot be indexed in type paths
  --> ROOT/tests/ui/resolve/super_type.sol:LL:CC
   |
LL |         super.super.S2 memory x3;
   |         ^^^^^
   |

error: aborting due to 6 previous errors

